feat: add Playnite Achievements plugin support alongside SuccessStory
Extract IAchievementProvider interface and introduce GsAchievementAggregator
to support multiple achievement data sources. For each game, the aggregator
tries providers in order and returns the first non-null result with a
zero-count guard to prevent empty results from blocking fallback.

New files:
- Services/IAchievementProvider.cs (shared interface + AchievementItem)
- Services/GsPlayniteAchievementsHelper.cs (reflection-based helper)
- Services/GsAchievementAggregator.cs (first-provider-wins aggregator)
- GsPlugin.Tests/AchievementProviderTests.cs (23 tests)

--- a/GsPlugin.csproj
+++ b/GsPlugin.csproj
@@ -123,7 +123,10 @@
     <!-- Services -->
     <Compile Include="Services\GsScrobblingService.cs" />
     <Compile Include="Services\GsAccountLinkingService.cs" />
+    <Compile Include="Services\IAchievementProvider.cs" />
     <Compile Include="Services\GsSuccessStoryHelper.cs" />
+    <Compile Include="Services\GsPlayniteAchievementsHelper.cs" />
+    <Compile Include="Services\GsAchievementAggregator.cs" />
     <Compile Include="Services\GsUpdateChecker.cs" />
     <Compile Include="Services\GsUriHandler.cs" />
     <!-- Root -->
