--- a/packages.config
+++ b/packages.config
@@ -1,13 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net462" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.9" targetFramework="net462" />
   <package id="Microsoft.CodeAnalysis.NetAnalyzers" version="9.0.0" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.Web.WebView2" version="1.0.3485.44" targetFramework="net462" />
   <package id="PlayniteSDK" version="6.15.0" targetFramework="net462" />
   <package id="Sentry" version="6.1.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.6.1" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="9.0.9" targetFramework="net462" />
-  <package id="System.Text.Json" version="8.0.5" targetFramework="net462" />
+  <package id="System.Text.Json" version="9.0.9" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.6.1" targetFramework="net462" />
   <package id="System.IO.Pipelines" version="9.0.9" targetFramework="net462" />
   <package id="System.Memory" version="4.6.3" targetFramework="net462" />
@@ -15,8 +15,8 @@
   <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net462" />
   <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net462" />
   <package id="System.Reflection.Metadata" version="9.0.9" targetFramework="net462" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net462" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net462" />
-  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net462" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
+  <package id="System.Text.Encodings.Web" version="9.0.9" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net462" />
 </packages>
